--- a/assets/main/style.css
+++ b/assets/main/style.css
@@ -7,12 +7,12 @@
 body{
     margin: 0;
     padding: 0;
-    background-color: dimgray;
+    background-color: rgba(0, 0, 0, 0.7);
 }
 
 header{
     background-color: rgba(0,0,0,0.5);
-    position:relative;
+    position: relative;
     width: 100%;
     z-index: 1;
     margin-top: 0;
@@ -71,7 +71,6 @@ p{
 
 .dropdown-content a {
     color: black;
-
     text-decoration: none;
     display: block;
 }
@@ -96,6 +95,7 @@ p{
 #slideShow{
     width: 100%;
     margin:auto;
+    height: 100%;
 }
 
 #slideShow img{
@@ -142,7 +142,6 @@ p{
     box-sizing:border-box;
     transition: all .85s cubic-bezier(0.25, 1, 0.33, 1);
     box-shadow: 0 30px 85px rgba(0,0,0,0.14), 0 15px 35px rgba(0,0,0,0.14);
-
 }
 
 .btn-menu:hover span:before{
@@ -154,7 +153,6 @@ p{
     opacity:0;
     animation: intro 1.6s;
     animation-fill-mode: forwards;
-
 }
 
 .btn-menu .dot{
@@ -231,6 +229,7 @@ p{
         opacity:1;
     }
 }
+
 @keyframes swag1 {
     0% {
         top:50px;
@@ -248,6 +247,7 @@ p{
         opacity:1;
     }
 }
+
 @keyframes swag1-out {
     0% {
         top:20px;
@@ -265,6 +265,7 @@ p{
         opacity:0;
     }
 }
+
 @keyframes swag2 {
     0% {
         top:50px;
@@ -336,6 +337,7 @@ p{
         opacity:0;
     }
 }
+
 @keyframes swag4 {
     0% {
         bottom:50px;
@@ -373,6 +375,8 @@ p{
 }
 
 #adsPanel{
+    width: 100%;
+    height: 100%;
     margin-top: 900px;
     text-align: center;
 }
@@ -402,11 +406,10 @@ h4{
 
 mark{
     background-color: transparent;
-    color: black;
+    color: red;
 }
 
 h2{
-    text-align: center;
     color: white;
     font-size: 30px;
 }
@@ -437,16 +440,15 @@ h2{
 }
 
 #news-panel{
-    width: 100%;
-    height: 700px;
     background-color: rgba(0, 0, 0, 0.7);
+    width: 100%;
 }
 
 #news-panel .news-list{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
-    grid-column-gap: 22px;
+    grid-column-gap: 10px;
     grid-row-gap: 0px;
     list-style: none;
     text-align: center;
@@ -460,6 +462,141 @@ h2{
 #news-panel .news-list li:nth-child(6) { grid-area: 2 / 3 / 3 / 4; }
 
 #news-panel .news-list li .news-list-content{
-    width: 300px;
-    height: 200px;
+}
+
+#news-panel img{
+    width: 100%;
+    height: 500px;
+}
+
+#news-panel .news-list .news-list-content:hover{
+    border: 2px solid yellow;
+}
+
+footer{
+    width: 100%;
+    text-align: center;
+}
+
+h5{
+    color: white;
+    font-size: 17px;
+}
+
+footer ul{
+    list-style: none;
+}
+
+h5:hover{
+    color: yellow;
+}
+
+footer .footer-content{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr;
+    grid-column-gap: 22px;
+    grid-row-gap: 0px;
+}
+
+footer i a{
+    width: 6%;
+}
+
+footer i:hover{
+    border: 2px solid yellow;
+    cursor: pointer;
+}
+
+footer .footer-content li:nth-child(1) { grid-area: 1 / 1 / 2 / 2; }
+footer .footer-content li:nth-child(2){ grid-area: 1 / 2 / 2 / 3; }
+footer .footer-content li:nth-child(3) { grid-area: 1 / 3 / 2 / 4; }
+footer .footer-content li:nth-child(4) { grid-area: 2 / 1 / 3 / 2; }
+footer .footer-content li:nth-child(5) { grid-area: 2 / 2 / 3 / 3; }
+footer .footer-content li:nth-child(6) { grid-area: 2 / 3 / 3 / 4; }
+
+/* ----------------------- First page done*/
+
+#pizza-list{
+    margin: auto;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    text-align: center;
+    margin-top: -30px;
+}
+
+#pizza-list h2{
+    font-size: 40px;
+}
+
+.pizza-list-parent{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 10px;
+    grid-row-gap: 50px;
+    list-style: none;
+}
+
+.pizza-list-parent li:nth-child(1) { grid-area: 1 / 1 / 2 / 2; }
+.pizza-list-parent li:nth-child(2) { grid-area: 1 / 2 / 2 / 3; }
+.pizza-list-parent li:nth-child(3) { grid-area: 1 / 3 / 2 / 4; }
+.pizza-list-parent li:nth-child(4) { grid-area: 1 / 4 / 2 / 5; }
+.pizza-list-parent li:nth-child(5) { grid-area: 1 / 5 / 2 / 6; }
+.pizza-list-parent li:nth-child(6) { grid-area: 2 / 1 / 3 / 2; }
+.pizza-list-parent li:nth-child(7) { grid-area: 2 / 2 / 3 / 3; }
+.pizza-list-parent li:nth-child(8) { grid-area: 2 / 3 / 3 / 4; }
+.pizza-list-parent li:nth-child(9) { grid-area: 2 / 4 / 3 / 5; }
+.pizza-list-parent li:nth-child(10) { grid-area: 2 / 5 / 3 / 6; }
+
+.pizza-list-parent li:hover{
+    border: 1px solid yellow;
+    border-radius: 10px;
+}
+
+h3{
+    color: white;
+}
+
+.item-price{
+    border: 1px solid yellow;
+    width: 60%;
+    margin: auto;
+    font-size: 20px;
+    color: white;
+    border-radius: 10px;
+    height: 30px;
+}
+
+.item-price:hover{
+    color: black;
+    background-color: yellow;
+    cursor: pointer;
+}
+
+.item-text{
+    float: left;
+    margin-left: 30%;
+}
+
+.pizza-item{
+    width: 60%;
+    margin:auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.pizza-item-text{
+    float: left;
+    color: white;
+    font-size: 25px;
+}
+
+.pizza-item-ico{
+    margin-left: 80%;
+}
+
+.pizza-item-ico:hover{
+    cursor: pointer;
+    color: yellow;
 }
