--- a/assets/main/media.css
+++ b/assets/main/media.css
@@ -136,3 +136,10 @@
         grid-template-rows: repeat(3, 1fr) !important;
     }
 }
+
+@media only screen and (max-width: 655px) {
+    #list-of-rest #rest-ul{
+        display: block !important;
+    }
+
+}
