Added job cards.

--- a/assets/main/media.css
+++ b/assets/main/media.css
@@ -106,6 +106,10 @@
         grid-template-columns: repeat(2, 1fr) !important;
         grid-template-rows: repeat(7, 1fr) !important;
     }
+    .box{
+        grid-template-columns: repeat(2, 1fr) !important;
+        grid-template-rows: repeat(2, 1fr) !important;
+    }
 }
 
 @media only screen and (max-width: 1225px) {
@@ -129,6 +133,10 @@
     .sushi-list-parent {
         grid-template-columns: repeat(2, 1fr) !important;
         grid-template-rows: repeat(4, 1fr) !important;
+    }
+
+    .box{
+        display: block !important;
     }
 
     .salad-list-parent {
