--- a/assets/main/style.css
+++ b/assets/main/style.css
@@ -814,7 +814,6 @@ header li:nth-child(1) .dropdown-content {
 }
 
 .box {
-    width: 1200px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
     grid-gap: 15px;
@@ -825,8 +824,7 @@ header li:nth-child(1) .dropdown-content {
     position: relative;
     width: 300px;
     height: 350px;
-    background: #fff;
-    margin: 0 auto;
+    background: lightgray;
     border-radius: 4px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, .2);
 }
@@ -893,7 +891,6 @@ header li:nth-child(1) .dropdown-content {
     padding: 0;
     font-weight: 600;
     font-size: 20px;
-    color: #777;
     text-transform: uppercase;
 }
 
